[gd_scene load_steps=17 format=2]

[ext_resource path="res://script/Niveau_3.gd" type="Script" id=1]
[ext_resource path="res://graphisme/fond.png" type="Texture" id=2]
[ext_resource path="res://graphisme/hub.png" type="Texture" id=3]
[ext_resource path="res://graphisme/moove.png" type="Texture" id=4]
[ext_resource path="res://graphisme/porte_fond.png" type="Texture" id=5]
[ext_resource path="res://graphisme/boutton.png" type="Texture" id=6]
[ext_resource path="res://graphisme/aff1.png" type="Texture" id=7]
[ext_resource path="res://graphisme/aff2.png" type="Texture" id=8]
[ext_resource path="res://graphisme/updownbuton.png" type="Texture" id=9]
[ext_resource path="res://graphisme/coffre.png" type="Texture" id=10]
[ext_resource path="res://graphisme/porte_gauche.png" type="Texture" id=11]
[ext_resource path="res://graphisme/porte_droite.png" type="Texture" id=12]
[ext_resource path="res://graphisme/Fkey2.png" type="Texture" id=13]
[ext_resource path="res://graphisme/Inventaire.png" type="Texture" id=14]
[ext_resource path="res://graphisme/Fkey4.png" type="Texture" id=15]
[ext_resource path="res://graphisme/Fkey1.png" type="Texture" id=16]

[node name="Niveau" type="Node"]

script = ExtResource( 1 )

[node name="fond" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( 511.362, 298.36 )
scale = Vector2( 1.67468, 1.95636 )
texture = ExtResource( 2 )

[node name="hub" type="Sprite" parent="." index="1"]

position = Vector2( 512.167, 298.922 )
scale = Vector2( 1.50375, 1.50957 )
texture = ExtResource( 3 )

[node name="start" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 305.0
margin_top = 261.0
margin_right = 417.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="moove" type="Sprite" parent="." index="3"]

position = Vector2( 358.485, 484.457 )
rotation = -1.5708
scale = Vector2( 1.41693, 1.42336 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Lv1A" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Lv1A" index="0"]

[node name="porte_sortie" type="Sprite" parent="Lv1A/Graphisme" index="0"]

visible = false
position = Vector2( 680.603, 376.046 )
scale = Vector2( 1.18187, 1.47697 )
texture = ExtResource( 5 )

[node name="porte_sortie2" type="Sprite" parent="Lv1A/Graphisme" index="1"]

visible = false
position = Vector2( 679.948, 219.497 )
scale = Vector2( 1.23435, 1.46406 )
texture = ExtResource( 5 )

[node name="boutton" type="Sprite" parent="Lv1A/Graphisme" index="2"]

visible = false
position = Vector2( 479.634, 356.573 )
texture = ExtResource( 6 )

[node name="aff1" type="Sprite" parent="Lv1A/Graphisme" index="3"]

visible = false
position = Vector2( 534.79, 202.848 )
texture = ExtResource( 7 )

[node name="aff2" type="Sprite" parent="Lv1A/Graphisme" index="4"]

visible = false
position = Vector2( 535.006, 204.064 )
texture = ExtResource( 8 )

[node name="updownbuton" type="Sprite" parent="Lv1A/Graphisme" index="5"]

visible = false
position = Vector2( 572.905, 351.416 )
scale = Vector2( 1.55514, 1.87031 )
texture = ExtResource( 9 )

[node name="porte_1B" type="Sprite" parent="Lv1A/Graphisme" index="6"]

visible = false
position = Vector2( 346.531, 378.388 )
scale = Vector2( 1.28131, 1.44094 )
texture = ExtResource( 5 )

[node name="porte_1B2" type="Sprite" parent="Lv1A/Graphisme" index="7"]

visible = false
position = Vector2( 346.826, 216.494 )
scale = Vector2( 1.27299, 1.43955 )
texture = ExtResource( 5 )

[node name="Interaction" type="Node" parent="Lv1A" index="1"]

[node name="Leave" type="Button" parent="Lv1A/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 636.0
margin_top = 285.0
margin_right = 728.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Up" type="Button" parent="Lv1A/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 541.0
margin_top = 338.0
margin_right = 565.0
margin_bottom = 369.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Down" type="Button" parent="Lv1A/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 579.0
margin_top = 333.0
margin_right = 601.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="To_1B" type="Button" parent="Lv1A/Interaction" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 297.0
margin_top = 286.0
margin_right = 397.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Locker" type="Button" parent="Lv1A/Interaction" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 449.0
margin_top = 326.0
margin_right = 508.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Lv1B" type="Node" parent="." index="5"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Lv1B" index="0"]

[node name="porte_1C" type="Sprite" parent="Lv1B/Graphisme" index="0"]

visible = false
position = Vector2( 352.492, 376.574 )
scale = Vector2( 1.30794, 1.47697 )
texture = ExtResource( 5 )

[node name="porte_1C2" type="Sprite" parent="Lv1B/Graphisme" index="1"]

visible = false
position = Vector2( 352.071, 216.615 )
scale = Vector2( 1.28131, 1.44094 )
texture = ExtResource( 5 )

[node name="porte_1A" type="Sprite" parent="Lv1B/Graphisme" index="2"]

visible = false
position = Vector2( 680.603, 376.046 )
scale = Vector2( 1.18187, 1.47697 )
texture = ExtResource( 5 )

[node name="boutton" type="Sprite" parent="Lv1B/Graphisme" index="3"]

visible = false
position = Vector2( 533.898, 358.08 )
texture = ExtResource( 6 )

[node name="aff1" type="Sprite" parent="Lv1B/Graphisme" index="4"]

visible = false
position = Vector2( 534.79, 202.848 )
texture = ExtResource( 7 )

[node name="aff2" type="Sprite" parent="Lv1B/Graphisme" index="5"]

visible = false
position = Vector2( 535.006, 204.064 )
texture = ExtResource( 8 )

[node name="Interaction" type="Node" parent="Lv1B" index="1"]

[node name="To_1A" type="Button" parent="Lv1B/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 637.0
margin_top = 288.0
margin_right = 724.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="To_1C" type="Button" parent="Lv1B/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 300.0
margin_top = 286.0
margin_right = 403.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Button" type="Button" parent="Lv1B/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 503.0
margin_top = 329.0
margin_right = 565.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Lv1C" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Lv1C" index="0"]

editor/display_folded = true

[node name="porte_1B" type="Sprite" parent="Lv1C/Graphisme" index="0"]

visible = false
position = Vector2( 680.999, 374.48 )
scale = Vector2( 1.29551, 1.52201 )
texture = ExtResource( 5 )

[node name="porte_2A" type="Sprite" parent="Lv1C/Graphisme" index="1"]

visible = false
position = Vector2( 369.245, 372.253 )
scale = Vector2( 1.29551, 1.52201 )
texture = ExtResource( 5 )

[node name="porte_2A2" type="Sprite" parent="Lv1C/Graphisme" index="2"]

visible = false
position = Vector2( 367.929, 220.98 )
scale = Vector2( 1.27299, 1.51308 )
texture = ExtResource( 5 )

[node name="Interaction" type="Node" parent="Lv1C" index="1"]

editor/display_folded = true

[node name="To_1B2" type="Button" parent="Lv1C/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 631.0
margin_top = 285.0
margin_right = 729.0
margin_bottom = 465.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="To_2A" type="Button" parent="Lv1C/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 280.0
margin_right = 416.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Lv2A" type="Node" parent="." index="7"]

[node name="Graphisme" type="Node" parent="Lv2A" index="0"]

editor/display_folded = true

[node name="porte_fond" type="Sprite" parent="Lv2A/Graphisme" index="0"]

visible = false
position = Vector2( 658.75, 403.724 )
texture = ExtResource( 5 )

[node name="coffre" type="Sprite" parent="Lv2A/Graphisme" index="1"]

visible = false
position = Vector2( 608.297, 158.877 )
rotation = -3.14159
scale = Vector2( 0.82265, 0.789873 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="aff2" type="Sprite" parent="Lv2A/Graphisme" index="2"]

visible = false
position = Vector2( 437.171, 316.298 )
texture = ExtResource( 8 )

[node name="aff1" type="Sprite" parent="Lv2A/Graphisme" index="3"]

visible = false
position = Vector2( 436.183, 317.598 )
texture = ExtResource( 7 )

[node name="porte_gauche" type="Sprite" parent="Lv2A/Graphisme" index="4"]

visible = false
position = Vector2( 207.629, 411.301 )
scale = Vector2( 0.986239, 1.12222 )
texture = ExtResource( 11 )

[node name="porte_gauche2" type="Sprite" parent="Lv2A/Graphisme" index="5"]

visible = false
position = Vector2( 210.316, 181.351 )
scale = Vector2( 0.948165, 1.06087 )
texture = ExtResource( 12 )

[node name="porte_fond2" type="Sprite" parent="Lv2A/Graphisme" index="6"]

visible = false
position = Vector2( 659.858, 191.17 )
texture = ExtResource( 5 )

[node name="coffre2" type="Sprite" parent="Lv2A/Graphisme" index="7"]

visible = false
position = Vector2( 498, 523 )
texture = ExtResource( 10 )

[node name="Fkey2" type="Sprite" parent="Lv2A/Graphisme" index="8"]

visible = false
position = Vector2( 496.211, 523.481 )
scale = Vector2( 1.7324, 1.79298 )
texture = ExtResource( 13 )

[node name="Interaction" type="Node" parent="Lv2A" index="1"]

[node name="coffre" type="Button" parent="Lv2A/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 445.0
margin_top = 483.0
margin_right = 553.0
margin_bottom = 562.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="to_1C" type="Button" parent="Lv2A/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 343.0
margin_right = 697.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="to_2B" type="Button" parent="Lv2A/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 175.0
margin_top = 313.0
margin_right = 239.0
margin_bottom = 505.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="lakey" type="Button" parent="Lv2A/Interaction" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 475.0
margin_top = 491.0
margin_right = 515.0
margin_bottom = 557.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Lv2B" type="Node" parent="." index="8"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Lv2B" index="0"]

editor/display_folded = true

[node name="updownbuton" type="Sprite" parent="Lv2B/Graphisme" index="0"]

visible = false
position = Vector2( 512.403, 347.186 )
scale = Vector2( 1.81331, 1.95326 )
texture = ExtResource( 9 )

[node name="porte_droite" type="Sprite" parent="Lv2B/Graphisme" index="1"]

visible = false
position = Vector2( 815.462, 181.424 )
scale = Vector2( 1.08349, 1.15727 )
texture = ExtResource( 11 )

[node name="porte_droite2" type="Sprite" parent="Lv2B/Graphisme" index="2"]

visible = false
position = Vector2( 815.086, 418.044 )
scale = Vector2( 1.03486, 1.07792 )
texture = ExtResource( 12 )

[node name="aff1" type="Sprite" parent="Lv2B/Graphisme" index="3"]

visible = false
position = Vector2( 515, 183 )
texture = ExtResource( 7 )

[node name="aff2" type="Sprite" parent="Lv2B/Graphisme" index="4"]

visible = false
position = Vector2( 514.746, 185.714 )
texture = ExtResource( 8 )

[node name="porte_gauche" type="Sprite" parent="Lv2B/Graphisme" index="5"]

visible = false
position = Vector2( 195.57, 414.316 )
scale = Vector2( 1.08349, 1.15727 )
texture = ExtResource( 11 )

[node name="porte_gauche2" type="Sprite" parent="Lv2B/Graphisme" index="6"]

visible = false
position = Vector2( 201.086, 174.044 )
scale = Vector2( 1.03486, 1.07792 )
texture = ExtResource( 12 )

[node name="Interaction" type="Node" parent="Lv2B" index="1"]

[node name="To_2A2" type="Button" parent="Lv2B/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_top = 324.0
margin_right = 846.0
margin_bottom = 515.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="To_2C" type="Button" parent="Lv2B/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 314.0
margin_right = 229.0
margin_bottom = 513.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Up2" type="Button" parent="Lv2B/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 476.0
margin_top = 328.0
margin_right = 503.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Down2" type="Button" parent="Lv2B/Interaction" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 517.0
margin_top = 332.0
margin_right = 547.0
margin_bottom = 365.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Lv2C" type="Node" parent="." index="9"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Lv2C" index="0"]

[node name="boutton" type="Sprite" parent="Lv2C/Graphisme" index="0"]

visible = false
position = Vector2( 520.214, 333.134 )
scale = Vector2( 1.47538, 1.4473 )
texture = ExtResource( 6 )

[node name="porte_droite" type="Sprite" parent="Lv2C/Graphisme" index="1"]

visible = false
position = Vector2( 822.242, 387.645 )
scale = Vector2( 1.218, 1.5075 )
texture = ExtResource( 12 )

[node name="aff1" type="Sprite" parent="Lv2C/Graphisme" index="2"]

visible = false
position = Vector2( 520.299, 212.538 )
scale = Vector2( 0.910035, 0.947191 )
texture = ExtResource( 7 )

[node name="aff2" type="Sprite" parent="Lv2C/Graphisme" index="3"]

visible = false
position = Vector2( 519.017, 211.984 )
texture = ExtResource( 8 )

[node name="Interaction" type="Node" parent="Lv2C" index="1"]

[node name="Sortie" type="Button" parent="Lv2C/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_top = 261.0
margin_right = 861.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Checked" type="Button" parent="Lv2C/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 478.0
margin_top = 290.0
margin_right = 560.0
margin_bottom = 377.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Fini" type="Node" parent="." index="10"]

editor/display_folded = true

[node name="Inventaire" type="Sprite" parent="Fini" index="0"]

position = Vector2( 927.043, 34.6369 )
texture = ExtResource( 14 )

[node name="Fkey4" type="Sprite" parent="Fini" index="1"]

position = Vector2( 988.157, 39.5229 )
scale = Vector2( 1.72885, 1.67115 )
texture = ExtResource( 15 )

[node name="Fkey1" type="Sprite" parent="Fini" index="2"]

position = Vector2( 854.826, 32.7851 )
scale = Vector2( 1.25273, 1.15178 )
texture = ExtResource( 16 )

[node name="Fkey2" type="Sprite" parent="Fini" index="3"]

visible = false
position = Vector2( 886.756, 32.4208 )
scale = Vector2( 1.14113, 1.23839 )
texture = ExtResource( 13 )

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="Lv1A/Interaction/Leave" to="." method="_on_Leave_pressed"]

[connection signal="pressed" from="Lv1A/Interaction/Up" to="." method="_on_Up_pressed"]

[connection signal="pressed" from="Lv1A/Interaction/Down" to="." method="_on_Down_pressed"]

[connection signal="pressed" from="Lv1A/Interaction/To_1B" to="." method="_on_To_1B_pressed"]

[connection signal="pressed" from="Lv1A/Interaction/Locker" to="." method="_on_Locker_pressed"]

[connection signal="pressed" from="Lv1B/Interaction/To_1A" to="." method="_on_To_1A_pressed"]

[connection signal="pressed" from="Lv1B/Interaction/To_1C" to="." method="_on_To_1C_pressed"]

[connection signal="pressed" from="Lv1B/Interaction/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Lv1C/Interaction/To_1B2" to="." method="_on_To_1B2_pressed"]

[connection signal="pressed" from="Lv1C/Interaction/To_2A" to="." method="_on_To_2A_pressed"]

[connection signal="pressed" from="Lv2A/Interaction/coffre" to="." method="_on_coffre_pressed"]

[connection signal="pressed" from="Lv2A/Interaction/to_1C" to="." method="_on_to_1C_pressed"]

[connection signal="pressed" from="Lv2A/Interaction/to_2B" to="." method="_on_to_2B_pressed"]

[connection signal="pressed" from="Lv2A/Interaction/lakey" to="." method="_on_lakey_pressed"]

[connection signal="pressed" from="Lv2B/Interaction/To_2A2" to="." method="_on_To_2A2_pressed"]

[connection signal="pressed" from="Lv2B/Interaction/To_2C" to="." method="_on_To_2C_pressed"]

[connection signal="pressed" from="Lv2B/Interaction/Up2" to="." method="_on_Up2_pressed"]

[connection signal="pressed" from="Lv2B/Interaction/Down2" to="." method="_on_Down2_pressed"]

[connection signal="pressed" from="Lv2C/Interaction/Sortie" to="." method="_on_Sortie_pressed"]

[connection signal="pressed" from="Lv2C/Interaction/Checked" to="." method="_on_Checked_pressed"]


